# soarm101-highschool-demos

./: .gitignore  99-so101-workshop.rules  CREDITS.md  README.md  pyproject.toml
.calibration/: hs_rig01_follower.json  hs_rig01_leader.json
configs/: arms.env.example  arms.yaml  tasks.yaml
deploy/: Dockerfile  soarm-api.service
docs/: SO-ARM101_LeRobot_WOW_Experimente_3h.docx  calibration_backup_restore.md  community_examples.md  leader_and_bimanual_notes.md  multi_arm_setup.md  ros2_decision.md  self_contained_transfer.md  teacher_checklist.md  web_interfaces_review.md
experiments/01_robot_puppet_mode/: README.md
scripts/: 00_find_ports.sh  01_calibrate_follower.sh  02_calibrate_leader.sh  03_teleop_wow.sh  04_record_micro_dataset.sh  05_replay_episode.sh  06_color_sort_cv.py  10_install_linux_uv.sh  11_install_linux_pip.sh  12_snapshot_devices.sh  13_generate_udev_rules.sh  14_setup_rig.sh  15_install_linux_permissions.sh  20_backup_calibration.sh  21_restore_calibration.sh  30_rig_teleop.sh  31_rig_record_local.sh  32_web_launcher.sh  33_parallel_teleop_two_rigs.sh  _load_env.sh  analyze_episode.py  detect_color.py  record_episode.sh  replay_all.sh  replay_episode.sh  reset_motors.sh  safe_home.sh  start_teleop.sh  stop_all.sh  timer_challenge.sh  vision_hint.py
src/soarm101_workshop/: __init__.py  (+10 more)
tests/: test_app.py  test_auth.py  test_cli_client.py  test_models.py  test_orchestra.py  test_routes_processes.py  test_routes_rigs.py  test_service.py  test_settings.py  test_sse.py  test_static.py  test_stations.py  test_vision_analysis.py
tools/: calibration_store.py  generate_udev_rules.py  setup_rig.py  snapshot_devices.py
(+27 files in other folders)
